<resources>

    <string name="app_name">Expatch</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="request_sex">성별을 선택해주세요.</string>
    <string name="menu_settings">delete</string>
<string name="title_activity_main">블루투스 채팅</string>

    <string name="send">보내기</string>
    <string name="not_connected">다른 단말에 연결되어 있지 않습니다.</string>
    <string name="bt_not_enabled_leaving">블루투스를 사용할 수 없도록 설정되어 있습니다. 앱을 종료합니다.</string>
    <string name="title_connecting">연결중입니다...</string>
    <string name="title_connected_to">연결되었습니다.</string>
    <string name="title_not_connected">연결되지 않았습니다.</string>

    <string name="scanning">단말을 검색중입니다...</string>
    <string name="select_device">연결할 단말을 선택하세요.</string>
    <string name="none_paired">페어링된 단말을 찾을 수 없습니다.</string>
    <string name="none_found">단말을 찾을 수 없습니다.</string>
    <string name="title_paired_devices">페어링된 단말</string>
    <string name="title_other_devices">사용가능한 다른 단말</string>
    <string name="button_scan">단말 검색하기</string>

    <string name="secure_connect">단말 연결하기 - (Secure 모드)</string>
    <string name="insecure_connect">단말 연결하기 - (Insecure 모드)</string>
    <string name="discoverable">이 단말을 검색가능한 상태로 만들기</string>
</resources>
