<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        
        android:layout_weight="1.5"
        android:gravity="center|top" >
        <TextView
           
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            
            android:gravity="center"
            android:paddingLeft="25dp"
            android:text="SIGN IN"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="30dp"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@drawable/editunderbox"
                android:textColor="#ffffff"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="30dp"
                android:text="@string/age"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/text_age"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLength="3"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="30dp"
                android:text="@string/sex"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/spinner_sex"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:entries="@array/sex"
                android:prompt="@string/prompt_sex" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1" 
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="30dp"
                android:text="@string/height"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/text_height"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
             >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="30dp"
                android:text="@string/weight"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/text_weight"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center|bottom" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/buttontest"
            android:gravity="center_vertical|left"
            android:paddingLeft="25dp"
            android:text="DONE"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>